versioned_docs/version-2023.1.1/professor/eliana_pelicon_pereira_figueira.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
const data = {
  title: "Eliana Peliçon Pereira Figueira",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "Anatomia e morfologia vegetal",
          size: 2,
          teachers: [
            "Eliana Peliçon Pereira Figueira"
          ],
          classroom: "",
          students: "BIO_ESPECIAL",
          time: "21:00 - 21:50"
        },
        {
          subject: "Anatomia e morfologia vegetal",
          size: 1,
          teachers: [
            "Eliana Peliçon Pereira Figueira"
          ],
          classroom: "",
          students: "BIO_ESPECIAL",
          time: "19:50 - 20:40"
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Biologia I",
          size: 2,
          teachers: [
            "Eliana Peliçon Pereira Figueira"
          ],
          classroom: "Laboratório de Biologia",
          students: "COM2023",
          time: "15:05 - 15:55"
        },
        {
          subject: "Embriologia animal e histologia",
          size: 2,
          teachers: [
            "Eliana Peliçon Pereira Figueira",
            "Paula Magalhães Souza Deccache"
          ],
          classroom: "",
          students: "BIO_ESPECIAL_2",
          time: "21:00 - 21:50"
        },
        {
          subject: "Embriologia animal e histologia",
          size: 2,
          teachers: [
            "Eliana Peliçon Pereira Figueira",
            "Paula Magalhães Souza Deccache"
          ],
          classroom: "",
          students: "BIO_ESPECIAL_2",
          time: "19:00 - 19:50"
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: []
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Biologia 1",
          size: 1,
          teachers: [
            "Eliana Peliçon Pereira Figueira"
          ],
          classroom: "Laboratório de Biologia",
          students: "EIN2023",
          time: "11:05 - 11:55"
        },
        {
          subject: "Biologia 4",
          size: 2,
          teachers: [
            "Eliana Peliçon Pereira Figueira"
          ],
          classroom: "Laboratório de Biologia",
          students: "EIN2020",
          time: "07:30 - 08:20"
        },
        {
          subject: "Biologia I",
          size: 2,
          teachers: [
            "Eliana Peliçon Pereira Figueira"
          ],
          classroom: "Laboratório de Biologia",
          students: "AGO2023",
          time: "09:25 - 10:15"
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: []
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:10 - 09:25",
      size: 15
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "11:55 - 13:10",
      size: 75
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "14:50 - 15:05",
      size: 15
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 19:00",
      size: 135
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "20:40 - 21:00",
      size: 20
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Eliana Peliçon Pereira Figueira

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
